[gd_scene load_steps=2 format=3 uid="uid://cwd5swlm2p78q"]

[ext_resource type="Script" path="res://selectable_area_2d.gd" id="1_3rb53"]

[node name="SelectableArea2D" type="Area2D"]
script = ExtResource("1_3rb53")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
